--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Veloxa</title>
+    <title>ElectraCart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
@@ -14,14 +14,13 @@
 
 <body>
     <!-- Navbar Start -->
-
     <nav class="navbar navbar-expand-md navbar-light" id="navbar">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <a class="navbar-brand d-flex align-items-center" href="#hero-bg">
                 <img src="media/Logo.png" alt="Logo" class="m-2" width="60px" />
                 <div class="brand-text">
-                    <div class="brand-name">Veloxa</div>
-                    <div class="tagline">Speed. Style. Simplicity.</div>
+                    <div class="brand-name">Electra<span style="color: #fc8c06;">Cart</span></div>
+                    <div class="tagline">GADGET STORE</div>
                 </div>
             </a>
 
@@ -31,102 +30,190 @@
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                
+                <div class="navbar-nav">
                 <!-- search bar -->
                 <form class="d-flex me-3" onsubmit="handleSearch(event)">
-                    <input class="form-control me-2 border border-dark" type="search"
+                    <input class="form-control me-2" type="search"
                         placeholder="Search for products..." aria-label="Search" name="query">
-
                 </form>
 
-                <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="Home.html">Home</a>
-                    <a class="nav-link" href="products.html">Products</a>
-                    <a class="nav-link" href="cart.html">Cart</a>
-                    <a class="nav-link fw-bolder" href="Login.html">Login</a>
-                </div>
+                <!-- Dark/Light mode toggle button -->
+                <button id="theme-toggle" class="btn btn-outline-dark me-3" onclick="toggleTheme()" aria-label="Toggle dark mode">
+                    🖤
+                </button>
+
+                <a class="nav-link" aria-current="page" href="Home.html">Home</a>
+                <a class="nav-link" href="products.html">Shop</a>
+                <a class="nav-link" href="cart.html">Cart</a>
+                <a class="nav-link" href="cart.html">About</a>
+                <a class="nav-link fw-bolder" href="Login.html">Login</a>
+            </div>
             </div>
         </div>
     </nav>
     <!-- navbar End-->
 
     <!-- Hero section started -->
-    <div class="Hero container-fluid p-1  bg-danger">
-        <h1>Welcome to Veloxa</h1>
+    <div class="Hero container-fluid p-1">
+        <h1>Welcome to ElectraCart</h1>
         <h3 class="mt-3">Your one-stop shop for electronics, fashion, and more.</h3>
         <button class="btn btn-dark mt-4 mb-3" id="start-button">Start Shopping</button>
     </div>
-
     <!-- Hero section End -->
 
-
-    <!-- shop by Category -->
-
-    <div class="container-fluid mt-3">
-        <div class=" row g-3">
-            <div class="col-4 col-md-2">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+    <!-- shop Category start-->
+    <div class="container mt-3">
+        <div class="Category row g-3">
+            <div class="col-4 col-md-2 d-flex align-items-stretch">
+                <div class="item w-100">
+                    <a href="products.html" class="text-decoration-none text-dark">
+                        <img src="media/phone_tablet.jpg" alt="Phone & Tablet" width="80%" class="mx-auto d-block rounded">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: inherit;">Phone & Tablet</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
-            <div class="col-4 col-md-2">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div class="col-4 col-md-2 d-flex align-items-stretch">
+                <div class="item w-100">
+                    <a href="products.html" class="text-decoration-none text-dark">
+                        <img src="media/laptop.jpg" alt="Computers & Laptops" width="80%" class="mx-auto d-block rounded">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: inherit; ">Computers & Laptops</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
-            <div class="col-4 col-md-2">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div class="col-4 col-md-2 d-flex align-items-stretch">
+                <div class="item w-100">
+                    <a href="products.html" class="text-decoration-none text-dark">
+                        <img src="media/Audio.jpg" alt="Audio Devices" width="80%" class="mx-auto d-block rounded">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: inherit;">Audio Devices</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
-            <div class="col-4 col-md-2">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div class="col-4 col-md-2 d-flex align-items-stretch">
+                <div class="item w-100">
+                    <a href="products.html" class="text-decoration-none text-dark">
+                        <img src="media/TV.jpg" alt="TVs & Home Entertainment" width="80%" class="mx-auto d-block rounded">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: inherit;">TVs & Home Entertainment</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
-            <div class="col-4 col-md-2">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div class="col-4 col-md-2 d-flex align-items-stretch">
+                <div class="item w-100">
+                    <a href="products.html" class="text-decoration-none text-dark">
+                        <img src="media/Camera.jpg" alt="Cameras & Photography" width="80%" class="mx-auto d-block rounded">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: inherit;">Cameras & Photography</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
-            <div class="col-4 col-md-2">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div class="col-4 col-md-2 d-flex align-items-stretch">
+                <div class="item w-100">
+                    <a href="products.html" class="text-decoration-none text-dark">
+                        <img src="media/game.jpg" alt="Gaming" width="80%" class="mx-auto d-block rounded">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: inherit;">Gaming</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
+<!-- shop Category end-->
+
+<!-- carousel start -->
+    <div class="container-fluid mt-5">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="media/carousel/carousel-1.png" class="d-block w-100 h-50" alt="Slide 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="media/carousel/carousel-2.png" class="d-block w-100 h-50" alt="Slide 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="media/carousel/carousel-3.png" class="d-block w-100 h-50" alt="Slide 3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <!-- Laptop Products Showcase Start -->
+<div class="container mt-5">
+    <h2 class="mb-4">Featured Laptops</h2>
+    <div class="row g-4">
+        <div class="col-12 col-md-4">
+            <div class="card h-100 shadow-sm">
+                <img src="media/Featured-Laptops/DELL LAPTOP.jpg" class="card-img-top" alt="Laptop 1">
+                <div class="card-body">
+                    <h5 class="card-title">Dell Inspiron 15</h5>
+                    <p class="card-text">15.6" FHD, Intel i5, 8GB RAM, 512GB SSD</p>
+                    <a href="products.html" class="btn btn-dark">View Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <div class="card h-100 shadow-sm">
+                <img src="media/Featured-Laptops/HP-pavilion.jpg" class="card-img-top" alt="Laptop 2">
+                <div class="card-body">
+                    <h5 class="card-title">HP Pavilion x360</h5>
+                    <p class="card-text">14" Touch, Intel i7, 16GB RAM, 1TB SSD</p>
+                    <a href="products.html" class="btn btn-dark">View Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <div class="card h-100 shadow-sm">
+                <img src="media/Featured-Laptops/Apple MacBook Air.jpg" class="card-img-top" alt="Laptop 3">
+                <div class="card-body">
+                    <h5 class="card-title">Apple MacBook Air</h5>
+                    <p class="card-text">13" Retina, M2 Chip, 8GB RAM, 256GB SSD</p>
+                    <a href="products.html" class="btn btn-dark">View Details</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Laptop Products Showcase End -->
 
 
 
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
     <script src="script.js"></script>
+
+
+
 </body>
 
 </html>
