--- a/products.html
+++ b/products.html
@@ -4,23 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veloxa</title>
+    <title>Products</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-</head>
+    <!-- You may also want to include the Poppins font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"></head>
 
 <body>
     <!-- Navbar Start -->
-
     <nav class="navbar navbar-expand-md navbar-light" id="navbar">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <a class="navbar-brand d-flex align-items-center" href="#hero-bg">
                 <img src="media/Logo.png" alt="Logo" class="m-2" width="60px" />
                 <div class="brand-text">
-                    <div class="brand-name">Veloxa</div>
-                    <div class="tagline">Speed. Style. Simplicity.</div>
+                    <div class="brand-name">Electra<span style="color: #fc8c06;">Cart</span></div>
+                    <div class="tagline">GADGET STORE</div>
                 </div>
             </a>
 
@@ -30,12 +29,25 @@
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                
                 <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="Home.html">Home</a>
-                    <a class="nav-link" href="products.html">Products</a>
-                    <a class="nav-link" href="cart.html">Cart</a>
-                    <a class="nav-link fw-bolder" href="Login.html">Login</a>
-                </div>
+                <!-- search bar -->
+                <form class="d-flex me-3" onsubmit="handleSearch(event)">
+                    <input class="form-control me-2" type="search"
+                        placeholder="Search for products..." aria-label="Search" name="query">
+                </form>
+
+                <!-- Dark/Light mode toggle button -->
+                <button id="theme-toggle" class="btn btn-outline-dark me-3" onclick="toggleTheme()" aria-label="Toggle dark mode">
+                    🖤
+                </button>
+
+                <a class="nav-link" aria-current="page" href="Home.html">Home</a>
+                <a class="nav-link" href="products.html">Shop</a>
+                <a class="nav-link" href="cart.html">Cart</a>
+                <a class="nav-link" href="cart.html">About</a>
+                <a class="nav-link fw-bolder" href="Login.html">Login</a>
+            </div>
             </div>
         </div>
     </nav>
@@ -56,17 +68,6 @@
             { id: 7, name: "Laptop", price: 899, image: "laptop.jpg" },
             { id: 8, name: "Laptop", price: 899, image: "laptop.jpg" },
             { id: 9, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 10, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 12, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 13, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 14, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 15, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 16, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 17, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 18, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 19, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 20, name: "Laptop", price: 899, image: "laptop.jpg" },
-
             // add more
         ];
 
@@ -104,6 +105,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script src="script.js"></script>
+
 
 </body>
 
