--- a/cart.html
+++ b/cart.html
@@ -1,90 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart</title>
-    <link rel="stylesheet" href="style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- You may also want to include the Poppins font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ElectraCart - Cart & Checkout</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <link rel="stylesheet" href="newStyle.css">
+  <style>
+    body {
+      padding-top: 90px;
+      background-color: #f8f9fa;
+    }
+
+    .billing-summary {
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 20px;
+    }
+
+    .form-section {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      border: 1px solid #ddd;
+    }
+  </style>
 </head>
 
 <body>
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-md navbar-light" id="navbar">
-        <div class="container-fluid d-flex align-items-center justify-content-between">
-            <a class="navbar-brand d-flex align-items-center" href="#hero-bg">
-                <img src="media/Logo.png" alt="Logo" class="m-2" width="60px" />
-                <div class="brand-text">
-                    <div class="brand-name">Electra<span style="color: #fc8c06;">Cart</span></div>
-                    <div class="tagline">GADGET STORE</div>
-                </div>
-            </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                
-                <div class="navbar-nav">
-                <!-- search bar -->
-                <form class="d-flex me-3" onsubmit="handleSearch(event)">
-                    <input class="form-control me-2" type="search"
-                        placeholder="Search for products..." aria-label="Search" name="query">
-                </form>
-
-                <!-- Dark/Light mode toggle button -->
-                <button id="theme-toggle" class="btn btn-outline-dark me-3" onclick="toggleTheme()" aria-label="Toggle dark mode">
-                    🖤
-                </button>
-
-                <a class="nav-link" aria-current="page" href="Home.html">Home</a>
-                <a class="nav-link" href="products.html">Shop</a>
-                <a class="nav-link" href="cart.html">Cart</a>
-                <a class="nav-link" href="cart.html">About</a>
-                <a class="nav-link fw-bolder" href="Login.html">Login</a>
+  <!-- Navbar -->
+  <header class="bg-white position-fixed w-100 top-0 start-0 shadow-sm" style="z-index:1050;">
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
+      <div class="container-fluid">
+        <div class="d-flex align-items-center">
+          <img src="media/Home/Logolight.png" alt="ElectraCart Logo" class="logo-img" id="logo-img">
+          <div class="logo d-flex flex-column ms-2" style="line-height:1;">
+            <div style="font-size:2rem; font-weight:400; letter-spacing:0.5px;">
+              <span style="color:#222; font-weight:400;" class="dark-text">Electra</span><span
+                style="color:#ff9800; font-weight:400;">Cart</span>
             </div>
-            </div>
+            <div
+              style="font-size:14px; letter-spacing:0.4em; color:#222; opacity:0.8; margin-top:0.2em; font-weight:200;"
+              class="dark-text">
+              GADGET STORE</div>
+          </div>
         </div>
+        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+          aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="bi bi-list" style="font-size:2rem;"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainNavbar">
+          <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+            <li class="nav-item"><a href="Home.html" class="nav-link fw-bold text-dark">Home</a></li>
+            <li class="nav-item"><a href="products.html" class="nav-link fw-bold text-dark">Shop</a></li>
+            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">About Us</a></li>
+            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Blog</a></li>
+            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Contact Us</a></li>
+          </ul>
+          <div class="d-flex align-items-center ms-md-3 mt-3 mt-md-0">
+            <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode"><i
+                class="bi bi-moon"></i></button>
+            <a href="Login.html" class="me-3 fw-bold text-dark text-decoration-none">Login</a>
+            <a href="cart.html" class="d-inline-block"
+              style="width:40px; height:40px; background:#000; border-radius:50%; text-align:center; line-height:40px;">
+              <i class="bi bi-cart3" style="color:#fff; font-size:1.3rem;"></i>
+            </a>
+          </div>
+        </div>
+      </div>
     </nav>
-    <!-- navbar End-->
-    <div class="container-fluid">
-        <h1>Your Cart</h1>
-        <h3 class="mt-3">Review your selected items before checkout.</h3>
+  </header>
+  <!-- navbar end -->
+
+  <div class="container">
+    <h2 class="mb-4">Your Cart</h2>
+    <div id="cart-container"></div>
+
+    <div class="row mt-5">
+      <!-- Billing Summary -->
+      <div class="col-md-6">
+        <div class="billing-summary shadow-sm text-black p-4">
+          <h5>Billing Summary</h5>
+          <hr />
+          <p>Subtotal: ₹<span id="subtotal">0</span></p>
+          <p>Shipping: ₹<span id="shipping">50</span></p>
+          <p>GST (18%): ₹<span id="gst">0</span></p>
+          <hr />
+          <h5>Total: ₹<span id="total">0</span></h5>
+        </div>
+      </div>
+
+      <!-- Checkout Form -->
+      <div class="col-md-6 text-black">
+        <form class="form-section shadow-sm" id="checkout-form">
+          <h5>Shipping & Contact</h5>
+          <div class="mb-3">
+            <label for="name" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="name" required />
+          </div>
+          <div class="mb-3">
+            <label for="phone" class="form-label">Phone Number</label>
+            <input type="tel" class="form-control" id="phone" required pattern="[6-9]{1}[0-9]{9}" />
+          </div>
+          <div class="mb-3">
+            <label for="address" class="form-label">Shipping Address</label>
+            <textarea class="form-control" id="address" rows="3" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-warning w-100 fw-bold">Place Order</button>
+        </form>
+      </div>
     </div>
+  </div>
 
-    <div class="container mt-5" id="cart-container"></div>
+  <!-- Scripts -->
+  <script>
+    const cartItems = JSON.parse(localStorage.getItem("cart")) || [];
+    const cartContainer = document.getElementById("cart-container");
+    const subtotalEl = document.getElementById("subtotal");
+    const shippingCost = 50;
+    const gstRate = 0.18;
 
-    <script>
-        const cartItems = JSON.parse(localStorage.getItem("cart")) || [];
-        const cartDiv = document.getElementById("cart-container");
+    let subtotal = 0;
 
-        if (cartItems.length === 0) {
-            cartDiv.innerHTML = "<h4>Your cart is empty.</h4>";
-        } else {
-            cartItems.forEach(item => {
-                cartDiv.innerHTML += `
+    if (cartItems.length === 0) {
+      cartContainer.innerHTML = "<div class='alert alert-warning'>Your cart is empty.</div>";
+    } else {
+      cartItems.forEach(item => {
+        subtotal += parseFloat(item.price);
+
+        cartContainer.innerHTML += `
         <div class="card mb-3">
-          <div class="card-body">
-            <h5>${item.name}</h5>
-            <p>$${item.price}</p>
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <div>
+              <h5 class="mb-1">${item.name}</h5>
+              <p class="mb-0">₹${item.price}</p>
+            </div>
+            <i class="bi bi-x-circle text-danger" style="cursor:pointer;" onclick="removeItem('${item.name}')"></i>
           </div>
         </div>
       `;
-            });
-        }
+      });
+    }
 
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    const gst = parseFloat((subtotal * gstRate).toFixed(2));
+    const total = subtotal + shippingCost + gst;
 
+    subtotalEl.textContent = subtotal.toFixed(2);
+    document.getElementById("gst").textContent = gst.toFixed(2);
+    document.getElementById("shipping").textContent = shippingCost.toFixed(2);
+    document.getElementById("total").textContent = total.toFixed(2);
 
+    // Remove item function
+    function removeItem(name) {
+      const newCart = cartItems.filter(item => item.name !== name);
+      localStorage.setItem("cart", JSON.stringify(newCart));
+      window.location.reload(); // Refresh to reflect changes
+    }
+
+    // Handle checkout form submission
+    document.getElementById("checkout-form").addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const name = document.getElementById("name").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+      const address = document.getElementById("address").value.trim();
+
+      if (name && phone && address && total > 50) {
+        alert(`Thank you, ${name}! Your order has been placed.\nTotal: ₹${total.toFixed(2)}`);
+        localStorage.removeItem("cart");
+        window.location.href = "Home.html"; // Redirect after order
+      }else{
+        alert(`Please choose your products from Shop page before placing an order.`);
+ window.location.href = "products.html";
+      }
+    });
+  </script>
+<script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
