--- a/products.html
+++ b/products.html
@@ -2,111 +2,120 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
-    <link rel="stylesheet" href="style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- You may also want to include the Poppins font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"></head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Phlox - Electronics Store</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="newStyle.css">
+
+  <style>
+    body {
+      padding-top: 90px;
+      /* Adjust if your navbar height changes */
+    }
+  </style>
+</head>
 
 <body>
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-md navbar-light" id="navbar">
-        <div class="container-fluid d-flex align-items-center justify-content-between">
-            <a class="navbar-brand d-flex align-items-center" href="#hero-bg">
-                <img src="media/Logo.png" alt="Logo" class="m-2" width="60px" />
-                <div class="brand-text">
-                    <div class="brand-name">Electra<span style="color: #fc8c06;">Cart</span></div>
-                    <div class="tagline">GADGET STORE</div>
-                </div>
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                
-                <div class="navbar-nav">
-                <!-- search bar -->
-                <form class="d-flex me-3" onsubmit="handleSearch(event)">
-                    <input class="form-control me-2" type="search"
-                        placeholder="Search for products..." aria-label="Search" name="query">
-                </form>
-
-                <!-- Dark/Light mode toggle button -->
-                <button id="theme-toggle" class="btn btn-outline-dark me-3" onclick="toggleTheme()" aria-label="Toggle dark mode">
-                    🖤
-                </button>
-
-                <a class="nav-link" aria-current="page" href="Home.html">Home</a>
-                <a class="nav-link" href="products.html">Shop</a>
-                <a class="nav-link" href="cart.html">Cart</a>
-                <a class="nav-link" href="cart.html">About</a>
-                <a class="nav-link fw-bolder" href="Login.html">Login</a>
+  <!-- Navbar Start -->
+  <header class="bg-white position-fixed w-100 top-0 start-0 shadow-sm" style="z-index:1050;">
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
+      <div class="container-fluid">
+        <div class="d-flex align-items-center">
+          <img src="media/Home/Logolight.png" alt="ElectraCart Logo" class="logo-img" id="logo-img">
+          <div class="logo d-flex flex-column ms-2" style="line-height:1;">
+            <div style="font-size:2rem; font-weight:400; letter-spacing:0.5px;">
+              <span style="color:#222; font-weight:400;" class="dark-text">Electra</span><span
+                style="color:#ff9800; font-weight:400;" >Cart</span>
             </div>
-            </div>
+            <div
+              style="font-size:14px; letter-spacing:0.4em; color:#222; opacity:0.8; margin-top:0.2em; font-weight:200;" class="dark-text">
+              GADGET STORE</div>
+          </div>
         </div>
+        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+          aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="bi bi-list" style="font-size:2rem;"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainNavbar">
+          <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+            <li class="nav-item"><a href="Home.html" class="nav-link fw-bold text-dark">Home</a></li>
+            <li class="nav-item"><a href="products.html" class="nav-link fw-bold text-dark">Shop</a></li>
+            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">About Us</a></li>
+            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Blog</a></li>
+            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Contact Us</a></li>
+          </ul>
+          <div class="d-flex align-items-center ms-md-3 mt-3 mt-md-0">
+            <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode"><i
+                class="bi bi-moon"></i></button>
+            <a href="Login.html" class="me-3 fw-bold text-dark text-decoration-none">Login</a>
+            <a href="cart.html" class="d-inline-block"
+              style="width:40px; height:40px; background:#000; border-radius:50%; text-align:center; line-height:40px;">
+              <i class="bi bi-cart3" style="color:#fff; font-size:1.3rem;"></i>
+            </a>
+          </div>
+        </div>
+      </div>
     </nav>
-    <!-- navbar End-->
+  </header>
+  <!-- Navbar End -->
 
-    <div class="container mt-5">
-        <div class="row" id="product-list"></div>
-    </div>
+  <div class="container mt-5">
+    <div class="row" id="product-list"></div>
+  </div>
 
-    <script>
-        const products = [
-            { id: 1, name: "Smartphone", price: 599, image: "phone.jpg" },
-            { id: 2, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 3, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 4, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 5, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 6, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 7, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 8, name: "Laptop", price: 899, image: "laptop.jpg" },
-            { id: 9, name: "Laptop", price: 899, image: "laptop.jpg" },
-            // add more
-        ];
+  <script>
+    const products = [
+      { id: 1, name: "Smartphone", price: 599, image: "phone.jpg" },
+      { id: 2, name: "Laptop", price: 899, image: "laptop.jpg" },
+      { id: 3, name: "Laptop", price: 899, image: "laptop.jpg" },
+      { id: 4, name: "Laptop", price: 899, image: "laptop.jpg" },
+      { id: 5, name: "Laptop", price: 899, image: "laptop.jpg" },
+      { id: 6, name: "Laptop", price: 899, image: "laptop.jpg" },
+      { id: 7, name: "Laptop", price: 899, image: "laptop.jpg" },
+      { id: 8, name: "Laptop", price: 899, image: "laptop.jpg" },
+      { id: 9, name: "Laptop", price: 899, image: "laptop.jpg" },
+      // add more
+    ];
 
-        const container = document.getElementById("product-list");
+    const container = document.getElementById("product-list");
 
-        products.forEach(product => {
-            container.innerHTML += `
+    products.forEach(product => {
+      container.innerHTML += `
       <div class="col-md-4 mb-4">
         <div class="card">
           <img src="${product.image}" class="card-img-top" alt="${product.name}">
           <div class="card-body">
             <h5 class="card-title">${product.name}</h5>
             <p class="card-text">$${product.price}</p>
-            <button class="btn btn-primary" onclick="addToCart(${product.id})">Add to Cart</button>
+            <button class="btn btn-dark" onclick="addToCart(${product.id})">Add to Cart</button>
           </div>
         </div>
       </div>
     `;
-        });
+    });
 
-        function addToCart(productId) {
-            let cart = JSON.parse(localStorage.getItem("cart")) || [];
-            const item = products.find(p => p.id === productId);
-            cart.push(item);
-            localStorage.setItem("cart", JSON.stringify(cart));
-            alert("Added to cart!" + cart);
-        }
-
-
+    function addToCart(productId) {
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const item = products.find(p => p.id === productId);
+      cart.push(item);
+      localStorage.setItem("cart", JSON.stringify(cart));
+      alert("Added to cart!" + cart);
+    }
 
 
 
 
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
+
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+  <script src="script.js"></script>
 
 
 </body>
