JS-Project update

--- a/products.html
+++ b/products.html
@@ -9,11 +9,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="newStyle.css">
-
   <style>
     body {
       padding-top: 90px;
-      /* Adjust if your navbar height changes */
+      font-family: 'Roboto', sans-serif;
+    }
+    .filter-section, .sort-section {
+      background-color: #f8f9fa;
+      padding: 1rem;
+      border-radius: 8px;
+      margin-bottom: 1.5rem;
+    }
+    .category-title {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #ff9800;
+      margin: 2rem 0 1rem;
+      border-bottom: 2px solid #ff9800;
+      padding-bottom: 0.5rem;
     }
   </style>
 </head>
@@ -28,7 +41,7 @@
           <div class="logo d-flex flex-column ms-2" style="line-height:1;">
             <div style="font-size:2rem; font-weight:400; letter-spacing:0.5px;">
               <span style="color:#222; font-weight:400;" class="dark-text">Electra</span><span
-                style="color:#ff9800; font-weight:400;" >Cart</span>
+                style="color:#ff9800; font-weight:400;">Cart</span>
             </div>
             <div
               style="font-size:14px; letter-spacing:0.4em; color:#222; opacity:0.8; margin-top:0.2em; font-weight:200;" class="dark-text">
@@ -62,62 +75,190 @@
   </header>
   <!-- Navbar End -->
 
-  <div class="container mt-5">
-    <div class="row" id="product-list"></div>
+  <div class="container mt-5 text-black">
+    <div class="row">
+      <!-- Filter Section -->
+      <div class="col-md-3">
+        <div class="filter-section">
+          <h5 class="fw-bold mb-3 ">Filters</h5>
+          <label class="form-label">Price</label>
+          <input type="range" class="form-range" min="100" max="3000" id="priceFilter">
+          <label class="form-label mt-3">Brand</label>
+          <select class="form-select" id="brandFilter">
+            <option value="">All</option>
+            <option value="Samsung">Samsung</option>
+            <option value="Apple">Apple</option>
+            <option value="Sony">Sony</option>
+            <option value="Dell">Dell</option>
+          </select>
+          <label class="form-label mt-3">Item</label>
+          <select class="form-select" id="categoryFilter">
+            <option value="">All</option>
+            <option value="phone">Phones</option>
+            <option value="laptop">Laptops</option>
+            <option value="tv">TV/Home Appliances</option>
+            <option value="audio">Audio Devices</option>
+            <option value="camera">Cameras</option>
+            <option value="accessory">Accessories</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- Product Section -->
+      <div class="col-md-9">
+        <div class="sort-section d-flex justify-content-between align-items-center">
+          <h5 class="mb-0">Sort by:</h5>
+          <select class="form-select w-auto" id="sortOptions">
+            <option value="price-asc">Price: Low to High</option>
+            <option value="price-desc">Price: High to Low</option>
+            <option value="bestseller">Best Seller</option>
+            <option value="trending">Trending</option>
+          </select>
+        </div>
+
+        <div id="product-sections"></div>
+      </div>
+    </div>
   </div>
+
+
+
+
+
+
+  <!-- product details Modal -->
+   <!-- Product Details Modal -->
+<div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <!-- <h5 class="modal-title" id="productModalLabel">Product Details</h5> -->
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="productDetailsContent">
+        <!-- Content will be injected here -->
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- js function for show details -->
+ <script>
+  function showDetails(productId) {
+  const product = products.find(p => p.id === productId);
+  const content = `
+    <div class="row text-black">
+      <div class="col-md-5">
+        <img src="${product.image}" alt="${product.name}" class="img-fluid rounded">
+      </div>
+      <div class="col-md-7">
+        <h3>${product.name}</h3>
+        <p><strong>Price:</strong> $${product.price}</p>
+        <p><strong>Brand:</strong> ${product.brand}</p>
+        <p><strong>Category:</strong> ${product.category}</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pretium, nisi sed facilisis imperdiet, neque erat pretium eros, non laoreet sapien ligula nec leo.</p>
+        <button class="btn btn-dark" onclick="addToCart(${product.id})">Add to Cart</button>
+      </div>
+    </div>
+  `;
+  document.getElementById("productDetailsContent").innerHTML = content;
+}
+
+ </script>
+
 
   <script>
     const products = [
-      { id: 1, name: "Smartphone", price: 599, image: "phone.jpg" },
-      { id: 2, name: "Laptop", price: 899, image: "laptop.jpg" },
-      { id: 3, name: "Laptop", price: 899, image: "laptop.jpg" },
-      { id: 4, name: "Laptop", price: 899, image: "laptop.jpg" },
-      { id: 5, name: "Laptop", price: 899, image: "laptop.jpg" },
-      { id: 6, name: "Laptop", price: 899, image: "laptop.jpg" },
-      { id: 7, name: "Laptop", price: 899, image: "laptop.jpg" },
-      { id: 8, name: "Laptop", price: 899, image: "laptop.jpg" },
-      { id: 9, name: "Laptop", price: 899, image: "laptop.jpg" },
-      // add more
+      { id: 1, name: "iPhone 14", price: 999, category: "phone", brand: "Apple", image: "phone.jpg", bestseller: true, trending: false },
+      { id: 2, name: "Dell XPS 13", price: 1199, category: "laptop", brand: "Dell", image: "laptop.jpg", bestseller: true, trending: true },
+      { id: 3, name: "Samsung QLED TV", price: 1499, category: "tv", brand: "Samsung", image: "tv.jpg", bestseller: false, trending: true },
+      { id: 4, name: "Sony Headphones", price: 299, category: "audio", brand: "Sony", image: "audio.jpg", bestseller: true, trending: true },
+      { id: 5, name: "Canon DSLR", price: 899, category: "camera", brand: "Canon", image: "camera.jpg", bestseller: false, trending: false },
+      { id: 6, name: "Wireless Charger", price: 49, category: "accessory", brand: "Apple", image: "accessory.jpg", bestseller: true, trending: false }
     ];
 
-    const container = document.getElementById("product-list");
+    function renderProducts() {
+      const productContainer = document.getElementById("product-sections");
+      productContainer.innerHTML = "";
 
-    products.forEach(product => {
-      container.innerHTML += `
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <img src="${product.image}" class="card-img-top" alt="${product.name}">
-          <div class="card-body">
-            <h5 class="card-title">${product.name}</h5>
-            <p class="card-text">$${product.price}</p>
-            <button class="btn btn-dark" onclick="addToCart(${product.id})">Add to Cart</button>
-          </div>
-        </div>
-      </div>
-    `;
-    });
+      const selectedCategory = document.getElementById("categoryFilter").value;
+      const selectedBrand = document.getElementById("brandFilter").value;
+      const maxPrice = document.getElementById("priceFilter").value;
+      const sortOption = document.getElementById("sortOptions").value;
+
+      let filteredProducts = products.filter(p => {
+        return (selectedCategory === "" || p.category === selectedCategory) &&
+               (selectedBrand === "" || p.brand === selectedBrand) &&
+               (maxPrice === "" || p.price <= parseInt(maxPrice));
+      });
+
+      if (sortOption === "price-asc") {
+        filteredProducts.sort((a, b) => a.price - b.price);
+      } else if (sortOption === "price-desc") {
+        filteredProducts.sort((a, b) => b.price - a.price);
+      } else if (sortOption === "bestseller") {
+        filteredProducts = filteredProducts.filter(p => p.bestseller);
+      } else if (sortOption === "trending") {
+        filteredProducts = filteredProducts.filter(p => p.trending);
+      }
+
+      const categoryNames = {
+        phone: "Phones",
+        laptop: "Laptops",
+        tv: "TV/Home Appliances",
+        audio: "Audio Devices",
+        camera: "Cameras",
+        accessory: "Accessories"
+      };
+
+      const shownCategories = new Set();
+
+      for (let i = 0; i < filteredProducts.length; i++) {
+        const product = filteredProducts[i];
+        if (!shownCategories.has(product.category)) {
+          productContainer.innerHTML += `<div class="category-title">${categoryNames[product.category]}</div><div class="row" id="section-${product.category}"></div>`;
+          shownCategories.add(product.category);
+        }
+        const section = document.getElementById(`section-${product.category}`);
+        const productCard = `
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="${product.image}" class="card-img-top" alt="${product.name}">
+              <div class="card-body">
+                <h5 class="card-title">${product.name}</h5>
+                <p class="card-text">$${product.price}</p>
+                <div class="d-flex justify-content-between">
+                <button class="btn btn-dark me-2" onclick="addToCart(${product.id})">Add to Cart</button>
+                <button class="btn btn-outline-dark" onclick="showDetails(${product.id})" data-bs-toggle="modal" data-bs-target="#productModal">View Details</button>
+                </div>
+                </div>
+            </div>
+          </div>`;
+        document.getElementById(`section-${product.category}`).innerHTML += productCard;
+      }
+    }
 
     function addToCart(productId) {
       let cart = JSON.parse(localStorage.getItem("cart")) || [];
       const item = products.find(p => p.id === productId);
       cart.push(item);
       localStorage.setItem("cart", JSON.stringify(cart));
-      alert("Added to cart!" + cart);
+      alert("Added to cart!");
     }
 
+    document.getElementById("sortOptions").addEventListener("change", renderProducts);
+    document.getElementById("priceFilter").addEventListener("input", renderProducts);
+    document.getElementById("brandFilter").addEventListener("change", renderProducts);
+    document.getElementById("categoryFilter").addEventListener("change", renderProducts);
 
-
-
-
-
+    window.addEventListener("DOMContentLoaded", renderProducts);
   </script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 
   <script src="script.js"></script>
-
-
 </body>
 
 </html>
