Js-project update (LoginPage)

--- a/Login.html
+++ b/Login.html
@@ -15,6 +15,14 @@
       display: flex;
       flex-direction: column;
     }
+  
+    /* Login button toggle */
+    .auth-link .disabled {
+      pointer-events: none;
+      opacity: 0.5;
+      cursor: default;
+      color: green;
+    }
   </style>
 </head>
 
@@ -77,7 +85,7 @@
           <a href="Register.html" class="fw-bold text-decoration-none text-wa">Register</a>
           <br>
           <!-- botton for delete the uploaded account -->
-          <button onclick="deleteAccount()" class="btn btn-danger">Delete My Account</button>
+          <button onclick="deleteAccount()" class="btn btn-danger w-100 mt-3">Delete My Account</button>
 
         </div>
       </form>
@@ -95,15 +103,21 @@
   </footer>
 
   <!-- Login Logic -->
-   <script>
+   <!-- <script>
   document.addEventListener("DOMContentLoaded", function () {
     const authLink = document.getElementById("authLink");
     const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
 
-    if (!authLink) return;
+    console.log("Logged in user:", loggedInUser);
+    const users = JSON.parse(localStorage.getItem('users') || '[]');
+    console.log("Registed users: ",users);
+
+
+    if (!authLink) return
+    ;
 
     if (loggedInUser) {
-      authLink.textContent = "Logoutttt";
+      authLink.textContent = "Logout-LPage";
       // not working  >......................................................................................................
       authLink.classList.add("disabled");
       authLink.href = "#";
@@ -120,7 +134,7 @@
       authLink.href = "Login.html";
     }
   });
-</script>
+</script> -->
 
 
 
@@ -139,10 +153,14 @@
       window.location.href = "Register.html";
     }
   }
+
+
 </script>
 
 
-  <script src="script.js"></script>
+
+
+<script src="script.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
