JS-Project udpates

--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
           <div class="d-flex align-items-center ms-md-3 mt-3 mt-md-0">
             <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode"><i
                 class="bi bi-moon"></i></button>
-            <a href="Login.html" class="me-3 fw-bold text-dark text-decoration-none">Login</a>
+            <a href="Login.html" id="authLink" class="me-3 fw-bold text-dark text-decoration-none auth-link">Login</a>
             <a href="cart.html" class="d-inline-block"
               style="width:40px; height:40px; background:#000; border-radius:50%; text-align:center; line-height:40px;">
               <i class="bi bi-cart3" style="color:#fff; font-size:1.3rem;"></i>
