--- a/Home.html
+++ b/Home.html
@@ -42,7 +42,7 @@
           <div class="d-flex align-items-center ms-md-3 mt-3 mt-md-0">
             <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode"><i
                 class="bi bi-moon"></i></button>
-            <a href="Login.html"  class="me-3 fw-bold text-dark text-decoration-none">Login</a>
+            <a href="Login.html" id="authLink" class="me-3 fw-bold text-dark text-decoration-none auth-link">Login</a>
             <a href="cart.html" class="d-inline-block"
               style="width:40px; height:40px; background:#000; border-radius:50%; text-align:center; line-height:40px;">
               <i class="bi bi-cart3" style="color:#fff; font-size:1.3rem;"></i>
@@ -54,16 +54,19 @@
   </header>
   <!-- Navbar End -->
 
-  <section class="hero">
+  <section class="hero vh-100">
     <div class="hero-text" style="color: black;">
       <h1>Beats Solo Wireless HEADPHONE</h1>
       <p>Description: There are many variations of passages of Lorem Ipsum available...</p>
-      <button class="btn btn-danger">Shop By Category</button>
+      <!-- /////////////////////// -->
+<button class="btn btn-danger" onclick="document.getElementById('categories').scrollIntoView({behavior: 'smooth'})">
+  Shop By Category
+</button>
     </div>
     <img src="media/Home/headphone.png" alt="Wireless Headphones">
   </section>
 
-  <section class="categories">
+  <section class="categories " id="categories">
     <div class="category text-white position-relative" style="background:#000; overflow:hidden;">
       <img src="media/Home/earphone.png" alt="Earphone"
         style="position:absolute; right:10px; bottom:1px; width:60%; opacity:0.7; z-index:0;">
@@ -71,7 +74,7 @@
         <span style="font-size:1rem; opacity:0.7;">Enjoy</span>
         <h3 style="font-size:1.5rem; font-weight:700; margin:0;">With</h3>
         <div style="font-size:2rem; font-weight:700; opacity:0.15; margin-bottom:10px;">EARPHONE</div>
-        <button class="btn btn-light">Browse</button>
+        <a class="btn btn-light" href="products.html">Browse</a>
       </div>
     </div>
     <div class="category position-relative" style="background:#fdd835; overflow:hidden;">
@@ -81,7 +84,7 @@
         <span style="font-size:1rem; opacity:0.7;">New</span>
         <h3 style="font-size:1.5rem; font-weight:700; margin:0;">Wearable</h3>
         <div style="font-size:2rem; font-weight:700; opacity:0.15; margin-bottom:10px;">GADGET</div>
-        <button class="btn btn-light">Browse</button>
+        <a class="btn btn-light" href="products.html">Browse</a>
       </div>
     </div>
     <div class="category text-white position-relative" style="background:#ef5350; overflow:hidden;">
@@ -91,7 +94,7 @@
         <span style="font-size:1rem; opacity:0.7;">Trend</span>
         <h3 style="font-size:1.5rem; font-weight:700; margin:0;">Devices</h3>
         <div style="font-size:2rem; font-weight:700; opacity:0.15; margin-bottom:10px;">LAPTOP</div>
-        <button class="btn btn-light">Browse</button>
+        <a class="btn btn-light" href="products.html">Browse</a>
       </div>
     </div>
     <div class="category position-relative" style="background:#f5f5f5; overflow:hidden;">
@@ -101,7 +104,7 @@
         <span style="font-size:1rem; opacity:0.7; color: #000;">Best</span>
         <h3 style="font-size:1.5rem; font-weight:700; margin:0; color: #000;">Gaming</h3>
         <div style="font-size:2rem; font-weight:700; opacity:0.15; margin-bottom:10px; color: #000;">CONSOLE</div>
-        <button class="btn btn-danger">Browse</button>
+        <a class="btn btn-danger" href="products.html">Browse</a>
       </div>
     </div>
     <div class="category text-white position-relative" style="background:#66bb6a; overflow:hidden;">
@@ -111,7 +114,7 @@
         <span style="font-size:1rem; opacity:0.7;">Play</span>
         <h3 style="font-size:1.5rem; font-weight:700; margin:0;">Game</h3>
         <div style="font-size:2rem; font-weight:700; opacity:0.15; margin-bottom:10px;">OCULUS</div>
-        <button class="btn btn-light">Browse</button>
+        <a class="btn btn-light"  href="products.html">Browse</a>
       </div>
     </div>
     <div class="category text-white position-relative" style="background:#42a5f5; overflow:hidden;">
@@ -121,7 +124,7 @@
         <span style="font-size:1rem; opacity:0.7;">New</span>
         <h3 style="font-size:1.5rem; font-weight:700; margin:0;">Amazon</h3>
         <div style="font-size:2rem; font-weight:700; opacity:0.15; margin-bottom:10px;">SPEAKER</div>
-        <button class="btn btn-light">Browse</button>
+        <a class="btn btn-light"  href="products.html">Browse</a>
       </div>
     </div>
   </section>
@@ -150,7 +153,7 @@
     <div>
       <h2>20% OFF FINAL SMILE</h2>
       <p>Summer Sale - 15 Nov to 7 Dec</p>
-      <button class="btn btn-light">Shop</button>
+      <a class="btn btn-light"  href="products.html">Shop</a>
     </div>
     <img src="media/Home/Headphone1.png" style="width: 30%; padding: 0px;" alt="Headphones">
   </section>
@@ -227,6 +230,7 @@
       </button>
     </div>
   </div>
+
   <!-- Laptop Products Showcase End -->
 
   <!-- phone products showcase start -->
@@ -328,8 +332,18 @@
 
 
   <!-- js section -->
+     <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
+
+
+<script>
+  document.getElementById('scrollLeft').onclick = function() {
+  document.getElementById('laptopScroll').scrollBy({left: -300, behavior: 'smooth'});
+};
+document.getElementById('scrollRight').onclick = function() {
+  document.getElementById('laptopScroll').scrollBy({left: 300, behavior: 'smooth'});
+};
+</script>
 </body>
 
 </html>
