--- a/Login.html
+++ b/Login.html
@@ -84,9 +84,10 @@
           <span class="text-dark">Or </span>
           <a href="Register.html" class="fw-bold text-decoration-none text-wa">Register</a>
           <br>
-          <!-- botton for delete the uploaded account -->
-          <button onclick="deleteAccount()" class="btn btn-danger w-100 mt-3">Delete My Account</button>
-
+          <!-- Delete button only shows when logged in -->
+          <button id="deleteAccountBtn" onclick="deleteAccount()" class="btn btn-danger w-100 mt-3 d-none">
+            Delete My Account
+          </button>
         </div>
       </form>
     </div>
@@ -102,68 +103,15 @@
     </div>
   </footer>
 
-  <!-- Login Logic -->
-   <!-- <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const authLink = document.getElementById("authLink");
-    const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
-
-    console.log("Logged in user:", loggedInUser);
-    const users = JSON.parse(localStorage.getItem('users') || '[]');
-    console.log("Registed users: ",users);
-
-
-    if (!authLink) return
-    ;
-
-    if (loggedInUser) {
-      authLink.textContent = "Logout-LPage";
-      // not working  >......................................................................................................
-      authLink.classList.add("disabled");
-      authLink.href = "#";
-      authLink.addEventListener("click", function (e) {
-        e.preventDefault();
-        if (confirm("Do you want to logout?")) {
-          localStorage.removeItem("loggedInUser");
-          alert("You have been logged out.");
-          window.location.reload();
-        }
-      });
-    } else {
-      authLink.textContent = "Login";
-      authLink.href = "Login.html";
-    }
-  });
-</script> -->
-
-
-
-
-<script>
-  function deleteAccount() {
-    const loggedInUser = JSON.parse(localStorage.getItem('loggedInUser'));
-    if (!loggedInUser) return alert("You're not logged in.");
-
-    if (confirm("Are you sure you want to delete your account? This cannot be undone.")) {
-      let users = JSON.parse(localStorage.getItem('users') || '[]');
-      users = users.filter(u => u.username !== loggedInUser.username);
-      localStorage.setItem('users', JSON.stringify(users));
-      localStorage.removeItem('loggedInUser');
-      alert("Your account has been deleted.");
-      window.location.href = "Register.html";
-    }
-  }
-
-
-</script>
-
-
-
 
 <script src="script.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script>
+    let users = JSON.parse(localStorage.getItem('regStorage') || '[]');
+console.log(users);
 
+</script>
 </body>
 
 </html>
