JS-project update

--- a/products.html
+++ b/products.html
@@ -81,8 +81,8 @@
     <div class="col-md-3">
       <div class="filter-section">
         <h5 class="fw-bold mb-3">Filters</h5>
-        <label class="form-label">Max Price: ₹<span id="priceDisplay">1000000</span></label>
-        <input type="range" class="form-range" min="100" max="1000000" step="50" id="priceFilter" value="1000000" />
+        <label class="form-label">Max Price: ₹<span id="priceDisplay">300000</span></label>
+        <input type="range" class="form-range" min="100" max="300000" step="50" id="priceFilter" value="300000" />
         
         <label class="form-label mt-3">Brand</label>
         <select class="form-select" id="brandFilter">
